# ML-GOTECHY-G7-MAJDA-ORTEGA

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  ml_gotechy.ipynb  old_app.py  pyproject.toml  requirements.txt  requirements.txt.bak  schema.sql  video_analytics.py
.atl/: skill-registry.md
docs/: ARGUS-VISION-TECH-DOC.docx  task.md  task2.md  tema.md
docs/analysis/: reverted-commits.md
notebooks/: ml_gotechy.ipynb
scripts/: apply_constraint.py  init_db.sql  migration_005_fix_roi_entry.sql  update_notebook.py
src/: app.py
src/config/: __init__.py  settings.py
src/controllers/: __init__.py  app_handler.py
src/models/: __init__.py  contracts.py  enums.py
src/providers/: __init__.py  base.py  factory.py  local_file.py  rtsp.py  youtube_live.py  youtube_utils.py  youtube_video.py
src/repositories/: __init__.py  alert_rule_repo.py  class_catalog_repo.py  db.py  metric_snapshot_repo.py  occupancy_snapshot_repo.py  roi_repo.py  rule_repo.py  session_repo.py  tracked_entity_repo.py  video_source_repo.py  zone_event_repo.py
src/services/: __init__.py  analytics_service.py  cohere_service.py  metrics_service.py  report_service.py  rule_evaluator.py
src/utils/: __init__.py  components.py  html_utils.py  pages.py
