[project]
name = "ml-gotechy"
version = "0.1.0"
description = "Video analytics platform with YOLO + ByteTrack"
requires-python = ">=3.12"
dependencies = [
    "certifi==2026.6.17",
    "charset-normalizer==3.4.7",
    "contourpy==1.3.3",
    "cycler==0.12.1",
    "filelock==3.29.4",
    "fonttools==4.63.0",
    "fsspec==2026.6.0",
    "idna==3.18",
    "jinja2==3.1.6",
    "lap>=0.5.12",
    "kiwisolver==1.5.0",
    "markupsafe==3.0.3",
    "matplotlib==3.11.0",
    "mpmath==1.3.0",
    "networkx==3.6.1",
    "numpy==2.4.6",
    "nvidia-ml-py==13.610.43",
    "ultralytics-opencv-headless==8.4.72",
    "packaging==26.2",
    "pillow==12.2.0",
    "polars==1.41.2",
    "polars-runtime-32==1.41.2",
    "psutil==7.2.2",
    "psycopg2-binary==2.9.12",
    "pyparsing==3.3.2",
    "python-dateutil==2.9.0.post0",
    "python-dotenv>=1.0.0",
    "pyyaml==6.0.3",
    "requests==2.34.2",
    "scipy==1.18.0",
    "setuptools==81.0.0",
    "six==1.17.0",
    "sympy==1.14.0",
    "torch==2.12.1",
    "torchvision==0.27.1",
    "typing-extensions==4.15.0",
    "ultralytics-thop==2.0.20",
    "urllib3==2.7.0",
    "yt-dlp==2026.6.9",
    "imageio-ffmpeg>=0.6.0,<1",
]

# Nota: la config de `python-downloads = "never"` se pasa por env var en el Dockerfile
# (UV_PYTHON_DOWNLOADS=never) porque [tool.uv] no acepta esa key para el caso runtime.

# PyTorch CPU-only index. Sin esto, `uv lock` resuelve torch==2.12.1 desde PyPI
# (build con CUDA, no CPU) y rompe la imagen. Pin explícito al índice CPU.
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu" },
]
torchvision = [
    { index = "pytorch-cpu" },
]
